# net_chan

./: .gitignore  .gitlab-ci.yml  Citation.cff  README.md  meson.build
.github/workflows/: c-cpp.yml
code/: meson.build
code/examples/: listener.c  manifest.h  net_fifo.h  talker.c
code/include/: common.h  logger.h  mrp_client.h  ptp_getclock.h  terminal.h  timedc_args.h  timedc_avtp.h  tracebuffer.h
code/include/srp/: mrp_client.h
code/scripts/: analyze_e2e_varnoise.py  analyze_gptp.py  analyze_varnoise.py  merge.py  nic_bw.py  watch_builder.sh
code/src/: client.c  common.c  listener.c  listener_mrp_client.c  logger.c  mrp_client.c  net_fifo.h  ptp_getclock.c  talker.c  talker_mrp_client.c  terminal.c  timedc_avtp.c  tracebuffer.c
code/srp/: listener_mrp_client.c  mrp_client.c  talker_mrp_client.c
code/test/: helper.h  test.c  test_macro.c  test_mrp.c  test_net_fifo.c  test_net_fifo.h  test_nh.c  test_pdu.c
code/tools/: timedc_args.c
examples/: invalid_talker.c  listener.c  listener.cpp  manifest.h  manychan.c  send_at_recv.c  send_at_talker.c  talker.c  talker.cpp
include/: logger.h  netchan.h  netchan.hpp  netchan_args.h  netchan_srp_client.h  netchan_standalone.h  netchan_utils.h  ptp_getclock.h  terminal.h  timedc_args.h  timedc_avtp.h  tracebuffer.h
include/srp/: eui64set.h  mrp.h  mrp_client.h  mrpd.h  msrp.h
plots/: analyze_cyclictest.py  analyze_e2e_varnoise.py  analyze_gptp.py  analyze_manychan.py  analyze_varnoise.py  filter_stream.py
scripts/: analyze_coverage.sh  analyze_tr.py  analyze_varnoise.py  build.sh  clean_coverage_report.py  fix_perms.sh  install.sh  nic_bw.py  run_tests.sh  watch_builder.sh
src/: logger.c  netchan.c  netchan_args.c  netchan_socket.c  netchan_srp_client.c  netchan_srp_helper.c  netchan_standalone.c  netchan_utils.c  ptp_getclock.c  terminal.c  timedc_avtp.c  tracebuffer.c
srp/: listener_mrp_client.c  mrp_client.c  mrpd.c  talker_mrp_client.c
test/: helper.h  test_chan.c  test_logger.c  test_macro.c  test_mrp.c  test_net_fifo.c  test_net_fifo.h  test_nh.c  test_pdu.c  test_tas.c  test_utils.c
tools/: netchan_args.c  timedc_args.c
